fix tsconfig and add pagination in ProductService and ProductListComponent

--- a/03-frontend/angular-ecommerce/tsconfig.json
+++ b/03-frontend/angular-ecommerce/tsconfig.json
@@ -2,7 +2,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    // "baseUrl": "./",
+    "baseUrl": ".",
+    "paths": {
+      "tslib" : [":~/node_modules/tslib/tslib.d.ts"]
+    },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
